--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@recogito/annotorious": "^2.7.8",
+    "@recogito/annotorious-openseadragon": "^2.7.8",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "openseadragon": "^3.1.0",
     "survey-vue": "^1.8.65",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
