--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@recogito/annotorious": "^2.7.8",
     "@recogito/annotorious-openseadragon": "^2.7.8",
     "core-js": "^3.25.3",
+    "dropzone": "^6.0.0-beta.2",
     "nuxt": "^2.15.8",
     "openseadragon": "^3.1.0",
     "survey-vue": "^1.8.65",
