--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/sentry": "^6.0.1",
     "@recogito/annotorious": "^2.7.8",
     "@recogito/annotorious-openseadragon": "^2.7.8",
     "core-js": "^3.25.3",
     "dropzone": "^6.0.0-beta.2",
     "nuxt": "^2.15.8",
+    "nuxt-socket-io": "^2.0.3",
     "openseadragon": "^3.1.0",
     "survey-vue": "^1.8.65",
     "vue": "^2.7.10",
