--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@recogito/annotorious-openseadragon": "^2.7.8",
     "core-js": "^3.25.3",
     "dropzone": "^6.0.0-beta.2",
+    "logrocket": "^3.0.1",
     "nuxt": "^2.15.8",
+    "nuxt-logrocket": "^1.5.2",
     "nuxt-socket-io": "^2.0.3",
     "openseadragon": "^3.1.0",
     "survey-vue": "^1.8.65",
